@@ -1,4 +1,5 @@
 - Show a toast when you change the current weapon on the Action Chart
+- Documentation for "onInventoryEvent" rule
 - Map should not count for twelf Special Items limit: Google play comment:
   "Está Genial! Gran Juego! Me ha Encantado! Como Sugerencia, para la próxima Actualización, poner el Límite de 12 Objetos Especiales desde el 
    Libro 6, el Mapa no debería contar como Objeto Especial para contar en el Limite y si hubiera una forma de poder organiza el inventario 
@@ -23,6 +24,7 @@
   object (see book 8, sect139)
 - ERRATAS:
   * Send patch!!!
+  * 6, 259: "Adivinación" should be "Concentración"
   * 9, tssf: "la Muer te", "un pode roso", "de Des si, era", "su cono cimiento de la urbe"
   * 9, gamerlz: "Si el lápiz señala 0, no cuenta." / check English version ???
   * 9, sect3: combat classes: "<enemy-attribute class="DESTREZA EN EL COMBATE">13</enemy-attribute><enemy-attribute class="RESISTENCIA">22</enemy-attribute>"
